avatar alignment fixed, load muted people and people I follow by page from cache, disable write actions when logged in with npub

--- a/src/app/component/profile/profile.component.scss
+++ b/src/app/component/profile/profile.component.scss
@@ -47,6 +47,13 @@
     margin-bottom: 10px;
   }
 
+  .avatar-image {
+    max-height: 100px;
+    border-radius: 50%;
+    margin-right: 3px;
+    margin-top:12px;
+  }
+
 }
 
 .mb-20{
